# router/sys/sys_data.go
@@ -1,0 +1,18 @@
+package sys
+
+import (
+	"go-gin-rest-api/api/v1/sys"
+	"go-gin-rest-api/middleware"
+
+	jwt "github.com/appleboy/gin-jwt/v2"
+	"github.com/gin-gonic/gin"
+)
+
+// 系统路由
+func InitDataRouter(r *gin.RouterGroup, authMiddleware *jwt.GinJWTMiddleware) (R gin.IRoutes) {
+	router := r.Group("data").Use(authMiddleware.MiddlewareFunc()).Use(middleware.CasbinMiddleware)
+	{
+		router.GET("/list", sys.GetSysData)
+	}
+	return router
+}
